<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_44sdp"
    android:layout_marginTop="@dimen/_166sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog_add">

    <TextView
        android:id="@+id/add_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_20ssp"
        android:text="@string/add_new"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_new_title"
        android:layout_marginTop="@dimen/_16ssp">

        <RadioButton
            android:id="@+id/radio_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16ssp"
            android:text="@string/note"
            android:checked="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp" />

        <RadioButton
            android:id="@+id/radio_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16ssp"
            android:text="@string/reminder"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

        <RadioButton
            android:id="@+id/radio_todo_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16ssp"
            android:text="@string/to_do_list"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_16ssp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textSize="@dimen/_14ssp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_30sdp" />

        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/ok"
            android:textColor="@color/teal"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_10sdp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>