<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/_104sdp"
        android:layout_height="@dimen/_144sdp"
        android:layout_margin="@dimen/_6sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/to_do_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/text_black"
            android:text="@string/shopping"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:id="@+id/to_do_image"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/ic_image_24"/>

        <TextView
            android:id="@+id/to_do_desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cabbage"/>

        <TextView
            android:id="@+id/to_do_day_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_time"
            android:textColor="@color/teal"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>