<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/day"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="238dp"
            android:layout_height="68dp"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:gravity="end"
            android:text="@string/date"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_40ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_day"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:layout_gravity="right"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reminder_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/date_layout"
        tools:layout_editor_absoluteX="-16dp"
        android:padding="@dimen/_15ssp"/>

    <TextView
        android:id="@+id/to_do_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reminder_recyclerview"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_14ssp"
        android:text="@string/to_do_lists"
        android:layout_marginLeft="@dimen/_14ssp"
        android:layout_marginStart="@dimen/_14ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/to_do_list_title"
        android:padding="@dimen/_14ssp"
        android:orientation="horizontal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_24"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/yellow"/>


</androidx.constraintlayout.widget.ConstraintLayout>